fix:inputerrorclass, input visibility

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -26,7 +26,7 @@
   background-color: #fff;
   border-radius: 10px;
   padding: 36px;
-  margin:0;
+  margin: 0;
   color: #000;
 }
 
@@ -85,7 +85,6 @@
   margin: 0;
   padding: 0;
   padding-bottom: 10px;
-  padding-right: 168px;
   width: 100%;
   box-sizing: border-box;
 }
@@ -164,11 +163,13 @@
 
 input[type="text"] {
   margin: 0;
+  width: 368px;
   max-width: 368px;
 }
 
 input[type="url"] {
   margin: 0;
+  width: 368px;
   max-width: 368px;
 }
 
